force-app/main/default/objects/Campaign/fields/Channel_CAC__c.field-meta.xml
<CustomField>
    <fullName>Channel_CAC__c</fullName>
    <formula>ActualCost /  NumberOfWonOpportunities</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel CAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>