force-app/main/default/objects/Campaign/fields/Job_number__c.field-meta.xml
<CustomField>
    <fullName>Job_number__c</fullName>
    <inlineHelpText>Enter job number from marketing</inlineHelpText>
    <label>Job number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>