force-app/main/default/objects/Campaign/fields/Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Product_Area__c</fullName>
    <inlineHelpText>Enter part of portfolio the campaign is targeting</inlineHelpText>
    <label>Product Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Giganet Connect</fullName>
            </value>
            <value>
                <fullName>M12 General</fullName>
                <label>Giganet General</label>
            </value>
            <value>
                <fullName>Splicecom</fullName>
            </value>
            <value>
                <fullName>Shoretel</fullName>
            </value>
            <value>
                <fullName>DBX</fullName>
            </value>
            <value>
                <fullName>Mobiles</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>