force-app/main/default/objects/Campaign/recordTypes/Channel_Business.recordType-meta.xml
<RecordType>
    <fullName>Channel_Business</fullName>
    <active>true</active>
    <label>Channel Business</label>
</RecordType>