force-app/main/default/objects/Campaign/recordTypes/Direct_Business.recordType-meta.xml
<RecordType>
    <fullName>Direct_Business</fullName>
    <active>true</active>
    <label>Direct Business</label>
</RecordType>