force-app/main/default/objects/Campaign/listViews/All_Completed_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Completed_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>Product_Area__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>AMOUNT_WON</columns>
    <columns>Job_number__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed Campaigns</label>
</ListView>