force-app/main/default/objects/Campaign/listViews/All_In_Progress_campaigns.listView-meta.xml
<ListView>
    <fullName>All_In_Progress_campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>Product_Area__c</columns>
    <columns>AMOUNT_WON</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>All In Progress campaigns</label>
</ListView>